<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".edit_account">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="#44BCFF"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="62dp" />

    <TextView
        android:id="@+id/lblEdit"
        android:layout_width="189dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo_2"
        android:gravity="center"
        android:text="@string/editAccount"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="115dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/userIcon"
                android:layout_width="134dp"
                android:layout_height="146dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline12"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.136"
                app:srcCompat="@drawable/upload_image" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="151dp" />

            <EditText
                android:id="@+id/bioId"
                android:layout_width="231dp"
                android:layout_height="105dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Bio"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/userIcon"
                app:layout_constraintTop_toTopOf="@+id/guideline11" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="54dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="235dp" />

            <TextView
                android:id="@+id/postsLbl"
                android:layout_width="106dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="@string/posts"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline13"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline12"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/followersLbl"
                android:layout_width="105dp"
                android:layout_height="50dp"
                android:layout_marginStart="28dp"
                android:gravity="center"
                android:text="@string/followers"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline13"
                app:layout_constraintStart_toEndOf="@+id/postsLbl"
                app:layout_constraintTop_toTopOf="@+id/guideline12"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/followingLbl"
                android:layout_width="105dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/following"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.857"
                app:layout_constraintStart_toEndOf="@+id/followersLbl"
                app:layout_constraintTop_toTopOf="@+id/guideline12"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/confirmBio"
                android:layout_width="114dp"
                android:layout_height="37dp"
                android:layout_marginEnd="12dp"
                android:text="@string/confirmButton"
                android:textColor="#FFFFFF"
                app:backgroundTint="#44BCFF"
                app:layout_constraintBottom_toTopOf="@+id/guideline12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.925"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toBottomOf="@+id/bioId"
                app:layout_constraintVertical_bias="0.347" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="300dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#44BCFF"
                app:backgroundTint="#44BCFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline13">

                <TextView
                    android:id="@+id/traitsLbl"
                    android:layout_width="77dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/baloo_2"
                    android:text="@string/traits"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.053"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/skillsLbl"
                    android:layout_width="72dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="28dp"
                    android:fontFamily="@font/baloo_2"
                    android:text="@string/skills"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.053"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/traitBtn" />

                <EditText
                    android:id="@+id/traitsId"
                    android:layout_width="336dp"
                    android:layout_height="93dp"
                    android:layout_marginTop="12dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:textColor="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/traitsLbl" />

                <EditText
                    android:id="@+id/skillsId"
                    android:layout_width="336dp"
                    android:layout_height="93dp"
                    android:layout_marginTop="12dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:textColor="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.457"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/skillsLbl" />

                <EditText
                    android:id="@+id/experiId"
                    android:layout_width="336dp"
                    android:layout_height="93dp"
                    android:layout_marginTop="12dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:textColor="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.36"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/experienceLbl" />

                <Button
                    android:id="@+id/traitBtn"
                    android:layout_width="115dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="12dp"
                    android:background="#FFFFFF"
                    android:text="@string/confirmButton"
                    android:textColor="#44BCFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.875"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/traitsId" />

                <Button
                    android:id="@+id/skillsBtn"
                    android:layout_width="115dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="12dp"
                    android:background="#FFFFFF"
                    android:text="@string/confirmButton"
                    android:textColor="#44BCFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.861"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/skillsId" />

                <Button
                    android:id="@+id/experiBtn"
                    android:layout_width="115dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="12dp"
                    android:background="#FFFFFF"
                    android:text="@string/confirmButton"
                    android:textColor="#44BCFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.837"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/experiId" />

                <TextView
                    android:id="@+id/experienceLbl"
                    android:layout_width="150dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="28dp"
                    android:fontFamily="@font/baloo_2"
                    android:text="@string/experi"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.068"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/skillsBtn" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/lastNameId"
                android:layout_width="111dp"
                android:layout_height="37dp"
                android:layout_marginEnd="28dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/firstNameId"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.761" />

            <TextView
                android:id="@+id/firstNameId"
                android:layout_width="111dp"
                android:layout_height="37dp"
                android:layout_marginStart="8dp"
                android:text="TextView"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline11"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.761" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>